update attribute names
