# swagger_server/models/resource_types.py
@@ -1,46 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from swagger_server.models.base_model_ import Model
-from swagger_server import util
-
-
-class ResourceTypes(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
-
-    Do not edit the class manually.
-    """
-
-    """
-    allowed enum values
-    """
-    PROGRAM = "PROGRAM"
-    EVENT = "EVENT"
-    REPORT = "REPORT"
-    SUBSCRIPTION = "SUBSCRIPTION"
-    VEN = "VEN"
-    RESOURCE = "RESOURCE"
-    def __init__(self):  # noqa: E501
-        """ResourceTypes - a model defined in Swagger
-
-        """
-        self.swagger_types = {
-        }
-
-        self.attribute_map = {
-        }
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'ResourceTypes':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The resourceTypes of this ResourceTypes.  # noqa: E501
-        :rtype: ResourceTypes
-        """
-        return util.deserialize_model(dikt, cls)
