# swagger_server/models/subscription_resource_operations.py
@@ -1,160 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from swagger_server.models.base_model_ import Model
-from swagger_server.models.resource_types import ResourceTypes  # noqa: F401,E501
-from swagger_server import util
-
-
-class SubscriptionResourceOperations(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
-
-    Do not edit the class manually.
-    """
-    def __init__(self, resources: List[ResourceTypes]=None, operations: List[str]=None, callback_url: str=None, bearer_token: str=None):  # noqa: E501
-        """SubscriptionResourceOperations - a model defined in Swagger
-
-        :param resources: The resources of this SubscriptionResourceOperations.  # noqa: E501
-        :type resources: List[ResourceTypes]
-        :param operations: The operations of this SubscriptionResourceOperations.  # noqa: E501
-        :type operations: List[str]
-        :param callback_url: The callback_url of this SubscriptionResourceOperations.  # noqa: E501
-        :type callback_url: str
-        :param bearer_token: The bearer_token of this SubscriptionResourceOperations.  # noqa: E501
-        :type bearer_token: str
-        """
-        self.swagger_types = {
-            'resources': List[ResourceTypes],
-            'operations': List[str],
-            'callback_url': str,
-            'bearer_token': str
-        }
-
-        self.attribute_map = {
-            'resources': 'resources',
-            'operations': 'operations',
-            'callback_url': 'callbackUrl',
-            'bearer_token': 'bearerToken'
-        }
-        self._resources = resources
-        self._operations = operations
-        self._callback_url = callback_url
-        self._bearer_token = bearer_token
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'SubscriptionResourceOperations':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The subscription_resourceOperations of this SubscriptionResourceOperations.  # noqa: E501
-        :rtype: SubscriptionResourceOperations
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def resources(self) -> List[ResourceTypes]:
-        """Gets the resources of this SubscriptionResourceOperations.
-
-        list of resources to subscribe to.  # noqa: E501
-
-        :return: The resources of this SubscriptionResourceOperations.
-        :rtype: List[ResourceTypes]
-        """
-        return self._resources
-
-    @resources.setter
-    def resources(self, resources: List[ResourceTypes]):
-        """Sets the resources of this SubscriptionResourceOperations.
-
-        list of resources to subscribe to.  # noqa: E501
-
-        :param resources: The resources of this SubscriptionResourceOperations.
-        :type resources: List[ResourceTypes]
-        """
-        if resources is None:
-            raise ValueError("Invalid value for `resources`, must not be `None`")  # noqa: E501
-
-        self._resources = resources
-
-    @property
-    def operations(self) -> List[str]:
-        """Gets the operations of this SubscriptionResourceOperations.
-
-        list of resource operations to subscribe to.  # noqa: E501
-
-        :return: The operations of this SubscriptionResourceOperations.
-        :rtype: List[str]
-        """
-        return self._operations
-
-    @operations.setter
-    def operations(self, operations: List[str]):
-        """Sets the operations of this SubscriptionResourceOperations.
-
-        list of resource operations to subscribe to.  # noqa: E501
-
-        :param operations: The operations of this SubscriptionResourceOperations.
-        :type operations: List[str]
-        """
-        allowed_values = ["POST", "PUT", "DELETE"]  # noqa: E501
-        if not set(operations).issubset(set(allowed_values)):
-            raise ValueError(
-                "Invalid values for `operations` [{0}], must be a subset of [{1}]"  # noqa: E501
-                .format(", ".join(map(str, set(operations) - set(allowed_values))),  # noqa: E501
-                        ", ".join(map(str, allowed_values)))
-            )
-
-        self._operations = operations
-
-    @property
-    def callback_url(self) -> str:
-        """Gets the callback_url of this SubscriptionResourceOperations.
-
-        User provided webhook URL.  # noqa: E501
-
-        :return: The callback_url of this SubscriptionResourceOperations.
-        :rtype: str
-        """
-        return self._callback_url
-
-    @callback_url.setter
-    def callback_url(self, callback_url: str):
-        """Sets the callback_url of this SubscriptionResourceOperations.
-
-        User provided webhook URL.  # noqa: E501
-
-        :param callback_url: The callback_url of this SubscriptionResourceOperations.
-        :type callback_url: str
-        """
-        if callback_url is None:
-            raise ValueError("Invalid value for `callback_url`, must not be `None`")  # noqa: E501
-
-        self._callback_url = callback_url
-
-    @property
-    def bearer_token(self) -> str:
-        """Gets the bearer_token of this SubscriptionResourceOperations.
-
-        User provided token. To avoid custom integrations, callback endpoints should accept the provided bearer token to authenticate VTN requests.   # noqa: E501
-
-        :return: The bearer_token of this SubscriptionResourceOperations.
-        :rtype: str
-        """
-        return self._bearer_token
-
-    @bearer_token.setter
-    def bearer_token(self, bearer_token: str):
-        """Sets the bearer_token of this SubscriptionResourceOperations.
-
-        User provided token. To avoid custom integrations, callback endpoints should accept the provided bearer token to authenticate VTN requests.   # noqa: E501
-
-        :param bearer_token: The bearer_token of this SubscriptionResourceOperations.
-        :type bearer_token: str
-        """
-
-        self._bearer_token = bearer_token
